--- a/index.html
+++ b/index.html
@@ -120,14 +120,12 @@
             </div>
             <div class="u-container-style u-grey-10 u-tab-pane u-tab-pane-3" id="tab-2917" role="tabpanel" aria-labelledby="link-tab-2917">
               <div class="u-container-layout u-container-layout-3">
-                <h4 class="u-text u-text-default u-text-5">Be The First To Review This Product!</h4>
-                <p class="u-text u-text-default u-text-6">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-btn u-button-style u-btn-1">write product review</a>
+                <p class="u-text u-text-default u-text-5">webhook GitHub job</p>
               </div>
             </div>
             <div class="u-container-style u-grey-10 u-tab-pane u-tab-pane-4" id="link-tab-6e5a" role="tabpanel" aria-labelledby="tab-6e5a">
               <div class="u-container-layout u-valign-top u-container-layout-4">
-                <a href="https://github.com/biggenev" class="u-btn u-button-style u-btn-2">GitHub</a>
+                <a href="https://github.com/biggenev" class="u-btn u-button-style u-btn-1">GitHub</a>
               </div>
             </div>
           </div>
