--- a/Главная.html
+++ b/Главная.html
@@ -71,9 +71,9 @@
                 <div class="u-container-layout u-valign-top u-container-layout-5"></div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-6">
+                <div class="u-container-layout u-container-layout-6">
                   <h2 class="u-text u-text-default u-text-9">Схема</h2>
-                  <p class="u-text u-text-10">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                  <p class="u-text u-text-10">GitHup - Jenkins -&nbsp;</p>
                 </div>
               </div>
             </div>
