--- a/Главная.html
+++ b/Главная.html
@@ -64,16 +64,12 @@
             </div>
           </div>
         </div>
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="400" data-image-height="265">
-                <div class="u-container-layout u-valign-top u-container-layout-5"></div>
-              </div>
-              <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-6">
-                  <h2 class="u-text u-text-default u-text-9">Схема</h2>
-                  <p class="u-text u-text-10">GitHup - Jenkins -&nbsp;</p>
+              <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-1">
+                <div class="u-container-layout u-valign-top u-container-layout-5">
+                  <img class="u-expanded-width u-image u-image-default u-image-1" src="images/1.jpg" alt="" data-image-width="2048" data-image-height="1152">
                 </div>
               </div>
             </div>
