--- a/Главная.html
+++ b/Главная.html
@@ -68,8 +68,8 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-valign-top u-container-layout-5">
-                  <img class="u-expanded-width u-image u-image-default u-image-1" src="images/1.jpg" alt="" data-image-width="2048" data-image-height="1152">
+                <div class="u-container-layout u-container-layout-5">
+                  <img class="u-image u-image-default u-image-1" src="images/1.jpg" alt="" data-image-width="2048" data-image-height="1152">
                 </div>
               </div>
             </div>
