--- a/Главная.html
+++ b/Главная.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nakoskinevgeniy.ru" class="u-image u-logo u-image-1" data-image-width="1982" data-image-height="1020" title="www">
           <img src="images/Logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -38,42 +38,34 @@
             <div class="u-container-style u-custom-item u-grey-5 u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h6 class="u-text u-text-black u-text-default u-text-1">Обо мне</h6>
-                <p class="u-align-center u-text u-text-grey-40 u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
+                <p class="u-align-center u-text u-text-black u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
                 </p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <h6 class="u-text u-text-black u-text-default u-text-3">Развитие</h6>
-                <p class="u-align-center u-text u-text-grey-40 u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
+                <p class="u-align-center u-text u-text-black u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
                 </p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h6 class="u-text u-text-black u-text-default u-text-5">Приложение</h6>
-                <p class="u-align-center u-text u-text-grey-40 u-text-6">Здесь будет мобильное приложение</p>
+                <p class="u-align-center u-text u-text-black u-text-6">Здесь будет мобильное приложение</p>
               </div>
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <h6 class="u-text u-text-black u-text-default u-text-7">Контакты<br>
                 </h6>
-                <p class="u-align-center u-text u-text-grey-40 u-text-8">email: na.ev.dm@gmail.com</p>
+                <p class="u-align-center u-text u-text-black u-text-8">email: na.ev.dm@gmail.com</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-5">
-                  <img class="u-image u-image-default u-image-1" src="images/1.jpg" alt="" data-image-width="2048" data-image-height="1152">
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="u-container-style u-group u-image u-image-1" data-image-width="1066" data-image-height="609">
+          <div class="u-container-layout u-container-layout-5"></div>
         </div>
       </div>
     </section>
