--- a/Контакты.html
+++ b/Контакты.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Контакты">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nakoskinevgeniy.ru" class="u-image u-logo u-image-1" data-image-width="1982" data-image-height="1020" title="www">
           <img src="images/Logo.png" class="u-logo-image u-logo-image-1">
         </a>
