--- a/Контакты.html
+++ b/Контакты.html
@@ -31,9 +31,7 @@
       </div></header> 
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-acf8"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
-      </div></footer>
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-acf8"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
         <span>Website Templates</span>
