--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h6 class="u-text u-text-black u-text-default u-text-5">Приложение</h6>
-                <p class="u-align-center u-text u-text-black u-text-6">Здесь будет мобильное приложение</p>
+                <p class="u-align-center u-text u-text-black u-text-6">Таймер</p>
               </div>
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
