--- a/Главная.html
+++ b/Главная.html
@@ -36,29 +36,28 @@
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-custom-item u-grey-5 u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
                 <h6 class="u-text u-text-black u-text-default u-text-1">Обо мне</h6>
                 <p class="u-align-center u-text u-text-black u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
                 </p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
                 <h6 class="u-text u-text-black u-text-default u-text-3">Развитие</h6>
                 <p class="u-align-center u-text u-text-black u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
                 </p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-container-layout-3">
-                <h6 class="u-text u-text-black u-text-default u-text-5">Приложение</h6>
-                <p class="u-align-center u-text u-text-black u-text-6">Таймер</p>
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+                <h6 class="u-text u-text-black u-text-default u-text-5">App</h6>
+                <p class="u-align-center u-text u-text-black u-text-6">Timer</p>
               </div>
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
-              <div class="u-container-layout u-similar-container u-container-layout-4">
-                <h6 class="u-text u-text-black u-text-default u-text-7">Контакты<br>
-                </h6>
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
+                <h6 class="u-text u-text-black u-text-default u-text-7">Contacts</h6>
                 <p class="u-align-center u-text u-text-black u-text-8">email: na.ev.dm@gmail.com</p>
               </div>
             </div>
