--- a/Главная.html
+++ b/Главная.html
@@ -20,13 +20,14 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/Logo.png"
+		"logo": "images/Logo.png",
+		"sameAs": []
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-557b"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nakoskinevgeniy.ru" class="u-image u-logo u-image-1" data-image-width="1982" data-image-height="1020" title="www">
           <img src="images/Logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -37,14 +38,14 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-custom-item u-grey-5 u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <h6 class="u-text u-text-black u-text-default u-text-1">Обо мне</h6>
+                <h6 class="u-text u-text-black u-text-default u-text-1">About me</h6>
                 <p class="u-align-center u-text u-text-black u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
                 </p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-                <h6 class="u-text u-text-black u-text-default u-text-3">Развитие</h6>
+                <h6 class="u-text u-text-black u-text-default u-text-3">Interests</h6>
                 <p class="u-align-center u-text u-text-black u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
                 </p>
               </div>
@@ -57,62 +58,65 @@
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
-                <h6 class="u-text u-text-black u-text-default u-text-7">Contacts</h6>
+                <h6 class="u-text u-text-black u-text-default u-text-7">Contact me</h6>
                 <p class="u-align-center u-text u-text-black u-text-8">email: na.ev.dm@gmail.com</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="u-container-style u-group u-image u-image-1" data-image-width="1066" data-image-height="609">
-          <div class="u-container-layout u-container-layout-5"></div>
+        <div class="u-container-style u-group u-group-1">
+          <div class="u-container-layout u-container-layout-5">
+            <img class="u-image u-image-1" src="images/2.jpg" data-image-width="741" data-image-height="402">
+          </div>
         </div>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-5bce">
-      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-        <div class="u-expanded-width u-tab-links-align-left u-tabs u-tabs-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-tab-links-align-left u-tabs u-tabs-1">
           <ul class="u-spacing-10 u-tab-list u-unstyled" role="tablist">
             <li class="u-tab-item u-tab-item-1" role="presentation">
-              <a class="active u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-1" id="link-tab-14b7" href="#tab-14b7" role="tab" aria-controls="tab-14b7" aria-selected="true">Docker</a>
+              <a class="active u-button-style u-tab-link u-tab-link-1" id="link-tab-5ccc" href="#tab-5ccc" role="tab" aria-controls="tab-5ccc" aria-selected="true">About Site</a>
             </li>
             <li class="u-tab-item u-tab-item-2" role="presentation">
-              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-2" id="link-tab-0da5" href="#tab-0da5" role="tab" aria-controls="tab-0da5" aria-selected="false">K8s</a>
+              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-2" id="link-tab-14b7" href="#tab-14b7" role="tab" aria-controls="tab-14b7" aria-selected="false">Docker</a>
             </li>
-            <li class="u-tab-item" role="presentation">
-              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-3" id="link-tab-2917" href="#tab-2917" role="tab" aria-controls="tab-2917" aria-selected="false">Jenkins</a>
+            <li class="u-tab-item u-tab-item-3" role="presentation">
+              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-3" id="link-tab-0da5" href="#tab-0da5" role="tab" aria-controls="tab-0da5" aria-selected="false">K8s</a>
             </li>
             <li class="u-tab-item u-tab-item-4" role="presentation">
-              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-4" id="tab-6e5a" href="#link-tab-6e5a" role="tab" aria-controls="link-tab-6e5a" aria-selected="false">GitHub</a>
+              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-4" id="link-tab-2917" href="#tab-2917" role="tab" aria-controls="tab-2917" aria-selected="false">Jenkins</a>
+            </li>
+            <li class="u-tab-item u-tab-item-5" role="presentation">
+              <a class="u-active-grey-10 u-button-style u-tab-link u-text-active-black u-text-black u-tab-link-5" id="tab-6e5a" href="#link-tab-6e5a" role="tab" aria-controls="link-tab-6e5a" aria-selected="false">GitHub</a>
             </li>
           </ul>
           <div class="u-tab-content">
-            <div class="u-align-left u-container-style u-grey-10 u-tab-active u-tab-pane u-tab-pane-1" id="tab-14b7" role="tabpanel" aria-labelledby="link-tab-14b7">
+            <div class="u-align-justify u-container-style u-tab-active u-tab-pane u-tab-pane-1" id="tab-5ccc" role="tabpanel" aria-labelledby="link-tab-5ccc">
               <div class="u-container-layout u-container-layout-1">
-                <h5 class="u-text u-text-1">DOckerfile</h5>
+                <p class="u-text u-text-default u-text-1">Данный сайт развёрнут на Yndex Cloud. Программист делает изменения на сайте, изменения уходят на GitHub - WebHook отправляет сообщение на Jenkins - Jenkins запускает build docker image - отправляет image на DockerHub - Развёртывает k8s кластер на YC с image нашего сайта.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-2" id="tab-14b7" role="tabpanel" aria-labelledby="link-tab-14b7">
+              <div class="u-container-layout u-container-layout-2">
                 <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
-                <p class="u-text u-text-2">FROM ubuntu:latest<br>LABEL maintainer="na.ev.dm@gmail.com"<br>LABEL version="0.2"<br>ENV TZ=Europe/Moscow<br>RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime &amp;&amp; echo $TZ &gt; /etc/timezone \<br> &amp;&amp; apt-get -y update \<br> &amp;&amp; apt-get -y install apache2 \<br> &amp;&amp; rm -rf /var/lib/apt/lists/*<br>ADD /site/. /var/www/html/<br>CMD ["/usr/sbin/apache2ctl","-DFOREGROUND"]<br>EXPOSE 80&nbsp;<br>
-                </p>
+                <a href="https://hub.docker.com/u/biggen" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1">DockerHub</a>
               </div>
             </div>
-            <div class="u-container-style u-grey-10 u-tab-pane u-tab-pane-2" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
-              <div class="u-container-layout u-valign-top u-container-layout-2">
-                <h5 class="u-text u-text-default u-text-3">Deploy+Autoscaling+loadbalanser</h5>
-                <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
-                <p class="u-text u-text-4"> ---<br>apiVersion: apps/v1<br>kind: Deployment<br>metadata:<br> name: my-site<br> labels:<br> env: prod<br> owner: NakoskinEvgeniy<br>spec:<br> replicas: 2<br> selector:<br> matchLabels:<br> project: site<br> template:<br> metadata:<br> labels:<br> project: site<br> spec:<br> containers:<br> - name: my-site-web<br> image: biggen/mysite:v3<br> ports:<br> - containerPort: 80<br>
-                  <br>---<br>apiVersion: autoscaling/v2beta2<br>kind: HorizontalPodAutoscaler<br>metadata:<br> name: my-site-autoscaling<br>spec:<br> scaleTargetRef:<br> apiVersion: apps/v1<br> kind: Deployment<br> name: my-site<br> minReplicas: 1<br> maxReplicas: 5<br> metrics:<br> - type: Resource<br> resource:<br> name: cpu<br> target:<br> type: Utilization<br> averageUtilization: 70<br> - type: Resource<br> resource:<br> name: memory<br> target:<br> type: Utilization<br> averageUtilization: 80<br>
-                  <br>
-                  <br>---<br>apiVersion: v1<br>kind: Service<br>metadata:<br> name: my-service-site<br> labels:<br> env: prod<br> owner: NakoskinEvgeniy<br>spec:<br> selector:<br> project: site<br> ports:<br> - name: app-listener<br> protocol: TCP<br> port: 80<br> targetPort: 80<br> type: LoadBalancer<br>
-                </p>
-              </div>
-            </div>
-            <div class="u-container-style u-grey-10 u-tab-pane u-tab-pane-3" id="tab-2917" role="tabpanel" aria-labelledby="link-tab-2917">
+            <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-3" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
               <div class="u-container-layout u-container-layout-3">
-                <p class="u-text u-text-default u-text-5">webhook GitHub job</p>
+                <h5 class="u-text u-text-default u-text-2">Deploy+Autoscaling+loadbalanser</h5>
+                <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
               </div>
             </div>
-            <div class="u-container-style u-grey-10 u-tab-pane u-tab-pane-4" id="link-tab-6e5a" role="tabpanel" aria-labelledby="tab-6e5a">
-              <div class="u-container-layout u-valign-top u-container-layout-4">
-                <a href="https://github.com/biggenev" class="u-btn u-button-style u-btn-1">GitHub</a>
+            <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-4" id="tab-2917" role="tabpanel" aria-labelledby="link-tab-2917">
+              <div class="u-container-layout u-container-layout-4">
+                <p class="u-text u-text-default u-text-3">Webhook GitHub job</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-5" id="link-tab-6e5a" role="tabpanel" aria-labelledby="tab-6e5a">
+              <div class="u-container-layout u-container-layout-5">
+                <a href="https://github.com/biggenev" class="u-btn u-button-style u-btn-2">GitHub</a>
               </div>
             </div>
           </div>
@@ -121,7 +125,28 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-acf8"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></footer>
+    <footer class="u-clearfix u-footer u-grey-80" id="sec-acf8"><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
+          <a class="u-social-url" title="facebook" target="_blank" href=""><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b2e5"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-b2e5"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
+            c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
+          </a>
+          <a class="u-social-url" title="twitter" target="_blank" href=""><span class="u-icon u-social-icon u-social-twitter u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3013"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-3013"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
+            c6.3,0,12.1-2.1,16.7-5.7c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1
+            c0-0.1,0-0.1,0-0.2c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14
+            c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
+            c2.7-0.3,5.3-1,7.7-2.1C88.7,43,86.4,45.4,83.8,47.3z"></path></svg></span>
+          </a>
+          <a class="u-social-url" title="instagram" target="_blank" href=""><span class="u-icon u-social-icon u-social-instagram u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-cead"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-cead"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
+            z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
+            C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
+            c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
+          </a>
+          <a class="u-social-url" title="linkedin" target="_blank" href=""><span class="u-icon u-social-icon u-social-linkedin u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4bdf"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-4bdf"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
+            C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
+            H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
+          </a>
+        </div>
+      </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
         <span>Website Templates</span>
