--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                 <h6 class="u-text u-text-black u-text-default u-text-5">App</h6>
-                <p class="u-align-center u-text u-text-black u-text-6">Timer</p>
+                <p class="u-align-center u-text u-text-black u-text-6">App Timer проходит проверку Google Play</p>
               </div>
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
@@ -64,6 +64,7 @@
             </div>
           </div>
         </div>
+        <h1 class="u-text u-text-default u-text-9">Данный сайт прошёл следующий путь</h1>
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout u-container-layout-5">
             <img class="u-image u-image-1" src="images/2.jpg" data-image-width="741" data-image-height="402">
@@ -94,7 +95,7 @@
           <div class="u-tab-content">
             <div class="u-align-justify u-container-style u-tab-active u-tab-pane u-tab-pane-1" id="tab-5ccc" role="tabpanel" aria-labelledby="link-tab-5ccc">
               <div class="u-container-layout u-container-layout-1">
-                <p class="u-text u-text-default u-text-1">Данный сайт развёрнут на Yndex Cloud. Программист делает изменения на сайте, изменения уходят на GitHub - WebHook отправляет сообщение на Jenkins - Jenkins запускает build docker image - отправляет image на DockerHub - Развёртывает k8s кластер на YC с image нашего сайта.</p>
+                <p class="u-text u-text-default u-text-1">Данный сайт развёрнут на Yandex Cloud. Делаются изменения на сайте, изменения уходят на GitHub - WebHook отправляет сообщение на Jenkins - Jenkins запускает build docker image - отправляет image на DockerHub - Развёртывает k8s кластер на YC с image нашего сайта.</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-2" id="tab-14b7" role="tabpanel" aria-labelledby="link-tab-14b7">
