--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </div>
             </div>
             <div class="u-align-left u-container-style u-grey-10 u-tab-pane u-tab-pane-5" id="link-tab-6e5a" role="tabpanel" aria-labelledby="tab-6e5a">
-              <div class="u-container-layout u-container-layout-5">
+              <div class="u-container-layout u-valign-middle u-container-layout-5">
                 <a href="https://github.com/biggenev" class="u-btn u-button-style u-btn-2">GitHub</a>
               </div>
             </div>
