--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <h1 class="u-align-center u-text u-text-default u-text-9">Данный сайт прошёл следующий путь</h1>
+        <h1 class="u-text u-text-default u-text-9">Данный сайт прошёл следующий путь</h1>
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout u-container-layout-5">
             <img class="u-image u-image-1" src="images/2.jpg" data-image-width="741" data-image-height="402">
