--- a/Главная.html
+++ b/Главная.html
@@ -37,29 +37,37 @@
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-custom-item u-grey-5 u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h6 class="u-text u-text-black u-text-default u-text-1">About me</h6>
-                <p class="u-align-center u-text u-text-black u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
+                <p class="u-align-center u-custom-item u-text u-text-black u-text-2">Накоскин Евгений Дмитриевич, 35 лет, трудовой стаж с 2009 года, большую часть времени работал с системами ДБО в разных банках, проживаю в г. Тюмень.<br>
                 </p>
+                <a href="https://play.google.com/store/apps/details?id=com.nakoskin.timer" class="u-border-none u-btn u-button-style u-custom-item u-none u-text-grey-10 u-btn-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/23123.JPG" alt=""></span>.
+                </a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
                 <h6 class="u-text u-text-black u-text-default u-text-3">Interests</h6>
-                <p class="u-align-center u-text u-text-black u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
+                <p class="u-align-center u-custom-item u-text u-text-black u-text-4">На данный момент, мне интересно развиваться, как DevOps специалисту.<br>K8s, Docker, Jenkins, Ansible, Terraform и другое, под конкретные задачи
                 </p>
+                <a href="https://play.google.com/store/apps/developer?id=Nakoskin+Evgeniy" class="u-border-none u-btn u-button-style u-custom-item u-none u-text-white u-btn-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/1212.JPG" alt=""></span>.
+                </a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
                 <h6 class="u-text u-text-black u-text-default u-text-5">App</h6>
-                <p class="u-align-center u-text u-text-black u-text-6">App Timer проходит проверку Google Play</p>
+                <p class="u-align-center u-custom-item u-text u-text-black u-text-6">Timer</p>
+                <a href="https://play.google.com/store/apps/developer?id=Nakoskin+Evgeniy" class="u-border-none u-btn u-button-style u-custom-item u-none u-text-white u-btn-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/GooglePlay.JPG" alt=""></span>.
+                </a>
               </div>
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-4-base u-repeater-item u-shape-rectangle u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
+              <div class="u-container-layout u-similar-container u-container-layout-4">
                 <h6 class="u-text u-text-black u-text-default u-text-7">Contact me</h6>
-                <p class="u-align-center u-text u-text-black u-text-8">email: na.ev.dm@gmail.com</p>
+                <p class="u-align-center u-custom-item u-text u-text-black u-text-8">email: na.ev.dm@gmail.com</p>
+                <a href="https://play.google.com/store/apps/developer?id=Nakoskin+Evgeniy" class="u-border-none u-btn u-button-style u-custom-item u-none u-text-palette-4-dark-1 u-btn-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/323312.JPG" alt=""></span>&nbsp;.
+                </a>
               </div>
             </div>
           </div>
